# nbody

./: .gitignore  CMakeLists.txt  Makefile  README.md  exec_times.csv  ic.md  output-03.csv  output-05.csv  output-07.csv  plot_acc_err.py  plot_energy.py
include/: Body.hpp  CUDAWrappers.hpp  Camera.hpp  IO.hpp  Matrix.hpp  Renderer.hpp  ShaderProgram.hpp  Simulation.hpp  Vector.hpp  camera.hpp  matrix.hpp  renderer.hpp  shader_program.hpp  simulation.hpp
include/cuda/: barnes_hut.cuh  btree.cuh  btree_gpu.cuh  octree.cuh  (+12 more)
plots/: output-256.csv  output-32.csv  output-33.csv  output-512.csv  output-64.csv  output-disk-00.csv  output-disk-01.csv  output-disk-02.csv  output-disk-03.csv  output-disk-05.csv  output-disk-06.csv  output-disk-07.csv  output-disk-09.csv  output-disk-double-03.csv  output-disk-double-05.csv  output-disk-float-03.csv  output-disk-float-05.csv  output-disk-noncum-01.csv  output-disk-noncum-02.csv  output-disk-noncum-03.csv  output-disk-noncum-04.csv  output-disk-noncum-05.csv  output-disk-noncum-07.csv  output-disk.csv  output-plummer.csv  output-sphere-00.csv  output-sphere-02.csv  output-sphere-03.csv  output-sphere-05.csv  output-sphere.csv  output-spin-05.csv  output.csv  plot_acc_err.py  plot_energy.py
shaders/: cube.frag  cube.vert  octree.frag  octree.vert  particle.frag  particle.vert
src/: Camera.cpp  Renderer.cpp  ShaderProgram.cpp  camera.cpp  main.cpp  renderer.cpp  shader_program.cpp
tests/body_test/: CMakeLists.txt  body_test.cpp
tests/io_test/: CMakeLists.txt  io_test.cpp
tests/vector_test/: CMakeLists.txt  vector_test.cpp
(+19 files in other folders)
